codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_freeform.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  问 题  1/1（ 未 回 答  1）                                                                                                   
  Share details.                                                                                                        
                                                                                                                        
  › 输 入 你 的 答 案 （ 可 选 ）                                                                                                 
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Enter 提 交 当 前 答 案  | Esc 中 断
