codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_wrapped_options.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                              
  问 题  1/1（ 未 回 答  1）                                                                                         
  Choose the next step for this task.                                                                         
                                                                                                              
  › 1. Discuss a code change  Walk through a plan, then implement it together with careful checks.            
    2. Run targeted tests     Pick the most relevant crate and validate the current behavior first.           
    3. Review the diff        Summarize the changes and highlight the most important risks and gaps.          
                                                                                                              
  Tab 添 加 备 注  | Enter 提 交 当 前 答 案  | Esc 中 断
